# iota-client-gen

./: .gitignore  CLAUDE.md  COMPARISON_IOTA_VS_SUI.md  DOC.md  ITERATION_PROGRESS.md  README.md  TEST_ANALYSIS_AND_PLAN.md  claude_code_start.sh
.github/workflows/: release.yml
generator/: Cargo.toml
generator/src/: framework_sources.rs  gen.rs  main.rs  manifest.rs  model_builder.rs  package_cache.rs
move/amm/: Move.toml
move/amm/sources/: pool.move  util.move
move/amm/tests/: pool_tests.move
move/examples/: Move.toml
move/examples/sources/: example_coin.move  examples.move  fixture.move
test2/: COMPARISON_RESULTS.md  iota_files.txt  sui_files.txt
test2/iota/: gen.toml
test2/iota/_dependencies/onchain/0x1/: index.ts
test2/iota/_framework/: init-loader.ts  loader.ts  reified.ts  util.ts  vector.ts
test2/iota/my-package/: index.ts  init.ts
test2/iota/my-package/gas-station/: functions.ts  structs.ts
test2/sui/: gen.toml
test2/sui/_framework/: init-loader.ts
test2/sui/my-package/: index.ts  init.ts
test2/sui/my-package/gas-station/: functions.ts  structs.ts
test_iota/: gen.toml
test_iota/_dependencies/onchain/0x1/ascii/: structs.ts
test_iota/_dependencies/onchain/0x1/bit-vector/: structs.ts
test_iota/_dependencies/onchain/0x1/option/: structs.ts
test_iota/_dependencies/onchain/0x1/type-name/: structs.ts
test_iota/_dependencies/onchain/0x1/uq64-64/: structs.ts
test_iota/_dependencies/onchain/0x2/: index.ts  init.ts
test_iota/_framework/: init-loader.ts
test_iota/my-package/: index.ts  init.ts
test_iota/my-package/vault/: functions.ts  structs.ts
test_sui/: gen.toml
test_sui/_framework/: init-loader.ts
test_sui/my-package/: index.ts  init.ts
test_sui/my-package/vault/: functions.ts  structs.ts
ts/: package.json
ts/examples/: main.ts
ts/tests/: source.test.ts
(+65 files in other folders)
