[package]
name = "iota-client-gen"
version = "0.3.2"
edition = "2021"

[dependencies]
tokio = "1.44.2"
anyhow = "1.0.71"
futures = "0.3.28"
tempfile = "^3.5.0"
toml = { version = "0.5.8", features = ["preserve_order"] }
regex = "1.7.1"
genco = "^0.17.8"
clap = "4.4"
codespan-reporting = "0.11.1"
convert_case = "^0.6.0"
colored = "2.0.0"

iota-move-build = { git = "https://github.com/iotaledger/iota.git", rev = "6e241550c4356338a9dbb3b493a92ebc365f7fd5"}
iota-move = { git = "https://github.com/iotaledger/iota.git", rev = "6e241550c4356338a9dbb3b493a92ebc365f7fd5"}
iota-sdk = { git = "https://github.com/iotaledger/iota.git", rev = "6e241550c4356338a9dbb3b493a92ebc365f7fd5"}
iota-json-rpc-types = { git = "https://github.com/iotaledger/iota.git", rev = "6e241550c4356338a9dbb3b493a92ebc365f7fd5"}
move-model-2 = { git = "https://github.com/iotaledger/iota.git", rev = "6e241550c4356338a9dbb3b493a92ebc365f7fd5"}
move-core-types = { git = "https://github.com/iotaledger/iota.git", rev = "6e241550c4356338a9dbb3b493a92ebc365f7fd5"}
move-binary-format = { git = "https://github.com/iotaledger/iota.git", rev = "6e241550c4356338a9dbb3b493a92ebc365f7fd5"}
move-symbol-pool = { git = "https://github.com/iotaledger/iota.git", rev = "6e241550c4356338a9dbb3b493a92ebc365f7fd5"}
move-bytecode-utils = { git = "https://github.com/iotaledger/iota.git", rev = "6e241550c4356338a9dbb3b493a92ebc365f7fd5"}
move-compiler = { git = "https://github.com/iotaledger/iota.git", rev = "6e241550c4356338a9dbb3b493a92ebc365f7fd5"}
move-package = { git = "https://github.com/iotaledger/iota.git", rev = "6e241550c4356338a9dbb3b493a92ebc365f7fd5"}
move-command-line-common = { git = "https://github.com/iotaledger/iota.git", rev = "6e241550c4356338a9dbb3b493a92ebc365f7fd5"}
